# docs/swagger.json
@@ -259,12 +259,12 @@
                 }
               },
               "required": [
-                  "name",
-                  "description",
-                  "startAt",
-                  "endAt",
-                  "price"
-                ],
+                "name",
+                "description",
+                "startAt",
+                "endAt",
+                "price"
+              ],
               "example": {
                 "name": "Tech Conference 2024 (Updated)",
                 "description": "An updated cutting-edge conference on emerging tech trends.",
@@ -395,6 +395,47 @@
           },
           "404": {
             "description": "Event not found"
+          }
+        }
+      }
+    },
+    "/api/events/suspended": {
+      "get": {
+        "summary": "Get all suspended events",
+        "operationId": "getSuspendedEvents",
+        "tags": [
+          "Events"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of suspended events",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Event"
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "No suspended events found"
+          },
+          "401": {
+            "description": "Unauthorized - Invalid or missing token"
+          },
+          "403": {
+            "description": "Forbidden - Admin access required"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
