# src/routes/routes.js
@@ -13,6 +13,7 @@ router.use(fileUpload());
 
 router.get('/events', eventController.getAllEvents);
 router.post('/events', verifyToken, eventController.createEvent);
+router.post('/events/suspended', verifyToken, verifyAdmin, eventController.getSuspendedEvents);
 router.get('/events/my', verifyToken, verifyAdvertiser, eventController.getUserEvents);
 router.get('/events/:id', eventController.getEventById);
 router.put('/events/:id', eventController.updateEvent);
